<resources>
    <string name="app_name">Amigo-The Study Buddy</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="summer21">Summer 21</string>
    <string name="winter21">Winter 21</string>
    <string name="summer22">Summer 22</string>
    <string name="winter22">Winter 22</string>


    <string name="syllabus">Syllabus</string>
    <string name="pyq">PYQ</string>
    <string name="notes">Notes</string>
    <string name="circulars">Circulars</string>
    <string name="imp">IMP Questions</string>
    <string name="track">Track Yourself</string>
    <string name="ebooks">E-books</string>
    <string name="flashCards">Flash Cards</string>
    <string name="myContent">My Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>