<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    android:theme="@style/myTheme"
    tools:showIn="@layout/app_bar_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <fragment
        android:id="@+id/nav_host_fragment_content_home"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSyllabus"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#F6F8FA"
            android:padding="60dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/syllabus"
                    app:drawableTopCompat="@drawable/syllabus" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardExamPaper"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:padding="60dp"
            app:cardBackgroundColor="#F6F8FA"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableTopCompat="@drawable/pyq"
                    android:text="@string/pyq" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNotes"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:padding="60dp"
            app:cardBackgroundColor="#F6F8FA"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    app:drawableTopCompat="@drawable/notes" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCirculars"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:padding="60dp"
            app:cardBackgroundColor="#F6F8FA"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circulars"
                    app:drawableTopCompat="@drawable/circulars" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardIMP"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:padding="60dp"
            app:cardBackgroundColor="#F6F8FA"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imp"
                    app:drawableTopCompat="@drawable/imp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTrack"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:padding="60dp"
            app:cardBackgroundColor="#F6F8FA"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track"
                    app:drawableTopCompat="@drawable/track" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardEbooks"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:padding="60dp"
            app:cardBackgroundColor="#F6F8FA"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ebooks"
                    app:drawableTopCompat="@drawable/ebook" />
        </androidx.cardview.widget.CardView>

    </GridLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>